--- a/fronted/public/css/pages/visualizar/asociaciones.css
+++ b/fronted/public/css/pages/visualizar/asociaciones.css
@@ -70,6 +70,9 @@ body {
     line-height: 1.6;
     font-size: 14px;
 }
+a {
+    text-decoration: none;  /* Quita el subrayado */
+}
 
 /* Layout */
 .app {
