cambia en database

--- a/fronted/public/css/pages/visualizar/asociaciones.css
+++ b/fronted/public/css/pages/visualizar/asociaciones.css
@@ -45,7 +45,7 @@
     --transition: all 0.2s ease;
     
     /* Nuevas variables para el estilo serio */
-    --primary-color: #1e5631;
+    --primary-color: #39a900;
     --primary-light: #2a7544;
     --primary-dark: #0e3a1c;
     --accent-color: #3a7e4f;
